package ca.mcmaster.se2aa4.island.team209;

public interface ExploreAlgorithm {
     String decision();
     void takeInfo(String info);
     String finalReport();
}
