package ca.mcmaster.se2aa4.island.team209;

public interface POIHandler {
    void addPoint(String type,POI poi);
    String getReport();
}
